force-app/main/default/objects/Service_Category__c/Service_Category__c.object-meta.xml
<CustomObject>
    <label>Service Category</label>
    <pluralLabel>Service Categories</pluralLabel>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Groups salon services into categories like Hair, Nails, Makeup, etc.</description>
</CustomObject>