force-app/main/default/objects/Service_Category__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this category is currently offered</description>
    <inlineHelpText>Uncheck to hide this category from booking</inlineHelpText>
</CustomField>