force-app/main/default/objects/Service_Category__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
    <description>Description of this service category</description>
    <inlineHelpText>Brief description of services in this category</inlineHelpText>
</CustomField>