force-app/main/default/objects/Service_Category__c/listViews/Active_Categories.listView-meta.xml
<ListView>
    <fullName>Active_Categories</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Categories</label>
</ListView>